--- a/src/views/pages/topics/hdindex/index.html
+++ b/src/views/pages/topics/hdindex/index.html
@@ -4,7 +4,6 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
         <title>活动专题</title>
         <link rel="stylesheet" href="http://myapp.com/sylphy/src/styles/css/pages/topics/hdindex.css">
     </head>
@@ -12,49 +11,224 @@
 
     <div class="container">
         <!-- 头图 -->
-        <section class＝"m-header">
-            <div class="m-image">
+        <section class＝"page-header">
+            <div>
                 <a href="">
-                    <img src="http://i3.mifile.cn/a4/T1HshvBQ_T1RXrhCrK.jpg" alt="">
+                    <img src="http://myapp.com/sylphy/resource/pages/topics/images/1.jpg" alt="" class="m-image">
                 </a>
             </div>
         </section>
+
         <!-- 专题图片 -->
-        <section class="m-topic m-thumb-col-1">
-            <div class="m-image">
-                <a href="">
-                    <img src="http://i3.mifile.cn/a4/T1Brx_BmAT1RXrhCrK.jpg" >
-                </a>
-            </div>
+        <section class="page-topic">
+            <ul class="m-flex-row">
+                <li class="m-flex-col">
+                    <a href="">
+                        <img src="http://myapp.com/sylphy/resource/pages/topics/images/2.jpg" class="m-image">
+                    </a>
+                </li>
+            </ul>
         </section>
 
-        <section class="m-topic m-thumb-col-1">
-            <div class="m-image">
-                <a href="">
-                    <img src="http://i3.mifile.cn/a4/T11_bvBbLT1RXrhCrK.jpg" >
-                </a>
-            </div>
+        <section class="page-topic">
+            <ul class="m-flex-row">
+                <li class="m-flex-col">
+                    <a href="">
+                        <img src="http://myapp.com/sylphy/resource/pages/topics/images/3.jpg" class="m-image">
+                    </a>
+                </li>
+            </ul>
         </section>
 
-        <section class="m-topic m-thumb-col-1">
-            <div class="m-image">
-                <a href="">
-                    <img src="http://i3.mifile.cn/a4/T1Brx_BmAT1RXrhCrK.jpg" >
-                </a>
-            </div>
+        <section class="page-topic">
+            <ul class="m-flex-row">
+                <li class="m-flex-col">
+                    <a href="">
+                        <img src="http://myapp.com/sylphy/resource/pages/topics/images/4-1.jpg" class="m-image">
+                    </a>
+                </li>
+                <li class="m-flex-col">
+                    <a href="">
+                        <img src="http://myapp.com/sylphy/resource/pages/topics/images/4-2.jpg" class="m-image">
+                    </a>
+                </li>
+            </ul>
         </section>
 
-        <section class="m-topic m-thumb-col-2">
-            <div class="m-image">
-                <a href="">
-                    <img src="http://i3.mifile.cn/a4/T1SCW_BvET1RXrhCrK.jpg" alt="">
-                </a>
-            </div>
-            <div class="m-image">
-                <a href="">
-                    <img src="http://i3.mifile.cn/a4/T1Pt_gBjAT1RXrhCrK.jpg" >
-                </a>
-            </div>
+        <!-- 单品配置 -->
+        <section class="page-accessory">
+            <h3 class="m-header">畅销配件</h3>
+            <ul class="accessory-list list-item-col-2">
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=360&amp;height=360" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499&nbsp;<span class="m-underline">₹544</span></p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=360&amp;height=360" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499</p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=360&amp;height=360" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499</p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=360&amp;height=360" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499</p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+            </ul>
+        </section>
+
+        <section class="page-accessory">
+            <h3 class="m-header">畅销配件</h3>
+            <ul class="accessory-list list-item-col-3">
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=240&amp;height=240" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499</p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=240&amp;height=240" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499</p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=240&amp;height=240" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499</p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=240&amp;height=240" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499</p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=240&amp;height=240" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499</p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=240&amp;height=240" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499</p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+            </ul>
+        </section>
+        
+        <!-- 单品配置 -->
+        <section class="page-accessory page-accessory2">
+            <h3 class="m-header">畅销配件</h3>
+            <ul class="accessory-list list-item-col-2">
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=360&amp;height=360" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499&nbsp;<span class="m-underline">₹544</span></p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=360&amp;height=360" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499</p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=360&amp;height=360" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499</p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=360&amp;height=360" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499</p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+            </ul>
+        </section>
+    
+        <!-- 专题图片 -->
+        <section class="page-topic">
+            <ul class="m-flex-row">
+                <li class="m-flex-col">
+                    <a href="">
+                        <img src="http://myapp.com/sylphy/resource/pages/topics/images/3.jpg" class="m-image">
+                    </a>
+                </li>
+            </ul>
         </section>
     </div>      
 
