--- a/src/styles/scss/_minix/_index.scss
+++ b/src/styles/scss/_minix/_index.scss
@@ -1,5 +1,6 @@
 @import "./_reset.scss";
 @import "./_variable.scss";
 @import "./_function.scss";
+@import "./_flex.scss";
 @import "./_textarea.scss";
 @import "./_common.scss";
