--- a/src/styles/css/pages/topics/pc.css
+++ b/src/styles/css/pages/topics/pc.css
@@ -240,12 +240,12 @@ body {
   text-decoration: line-through; }
 
 .m-header {
-  height: 1.875rem;
-  line-height: 1.875rem;
+  height: 60px;
+  line-height: 60px;
   color: #fff;
-  padding-left: .5rem;
+  padding-left: 16px;
   background-color: #ea5742;
-  border-radius: .25rem;
+  border-radius: 8px;
   box-sizing: box-sizing; }
 
 .m-more-btn {
@@ -257,35 +257,37 @@ body {
   text-align: center;
   background-color: #fc4b1e;
   border-color: #fc4b1e;
-  border-radius: 0.25rem;
-  width: 6.25rem;
+  border-radius: 8px;
+  width: 200px;
   margin: 0 auto;
-  height: 2.125rem;
-  line-height: 2.125rem; }
+  height: 68px;
+  line-height: 68px; }
 
-.m-flex-row {
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  box-orient: horizontal;
-  box-direction: normal;
-  box-lines: multiple;
-  -webkit-flex-flow: row wrap;
-  -ms-flex-flow: row wrap;
-  flex-flow: row wrap; }
-  .m-flex-row .m-flex-col {
-    box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1; }
+.m-flex-row .m-flex-col {
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
+  width: 100%; }
+
+.m-flex-row2 {
+  *zoom: 1; }
+  .m-flex-row2:before, .m-flex-row2:after {
+    display: table;
+    content: "";
+    line-height: 0; }
+  .m-flex-row2:after {
+    clear: both; }
+  .m-flex-row2 .m-flex-col {
+    float: left;
+    width: 50%; }
 
 .container {
-  width: 22.5rem;
+  width: 960px;
   margin: 0 auto;
   background-color: #fff;
   line-height: 2; }
   .container section:not(:first-child) {
-    margin-top: 0.25rem; }
+    margin-top: 8px; }
   .container a {
     color: #000; }
   .container .page-header {
@@ -295,7 +297,7 @@ body {
       right: 3%;
       top: 2%;
       color: #fff;
-      font-size: 0.75rem; }
+      font-size: 24px; }
   .container .page-accessory .accessory-list {
     width: 100%;
     *zoom: 1; }
@@ -309,28 +311,32 @@ body {
       float: left;
       text-align: center;
       border-bottom: 1px solid #e6e6e6;
-      padding-bottom: .5rem;
+      padding-bottom: 16px;
       box-sizing: border-box; }
       .container .page-accessory .accessory-list .accessory-item .item-name {
-        height: 1.5rem;
-        line-height: 1.5rem; }
+        height: 48px;
+        line-height: 48px; }
       .container .page-accessory .accessory-list .accessory-item .item-buy {
         color: #fff; }
     .container .page-accessory .accessory-list .item-desc {
       background-color: #fff; }
   .container .page-accessory2 {
     background-color: #ebe7e0; }
-  .container .list-item-col-1 li {
-    width: 22.5rem; }
   .container .list-item-col-2 li {
-    width: 11.25rem; }
+    width: 50%; }
     .container .list-item-col-2 li:nth-child(odd) {
       border-right: 1px solid #e6e6e6; }
     .container .list-item-col-2 li .m-image {
       width: 98%; }
   .container .list-item-col-3 li {
-    width: 7.5rem; }
+    width: 33%; }
     .container .list-item-col-3 li:not(:nth-child(3n)) {
       border-right: 1px solid #e6e6e6; }
     .container .list-item-col-3 li .m-image {
+      width: 98%; }
+  .container .list-item-col-4 li {
+    width: 25%; }
+    .container .list-item-col-4 li:not(:nth-child(4n)) {
+      border-right: 1px solid #e6e6e6; }
+    .container .list-item-col-4 li .m-image {
       width: 98%; }
