--- a/src/views/pages/topics/hdindex/pc.html
+++ b/src/views/pages/topics/hdindex/pc.html
@@ -3,18 +3,17 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <title>活动专题</title>
-        <link rel="stylesheet" href="http://127.0.0.1:8088/sylphy/src/styles/css/pages/topics/hdindex.css">
+        <link rel="stylesheet" href="http://127.0.0.1:8088/sylphy/src/styles/css/pages/topics/pc.css">
     </head>
     <body>
 
-    <div class="container">
+    <div class="container page-pc">
         <!-- 头图 -->
         <section class="page-header">
-            <div class="header">
+            <div>
                 <a href="">
-                    <img src="http://127.0.0.1:8088/sylphy/resource/pages/topics/images/1.jpg" alt="" class="m-image">
+                    <img src="http://i3.mifile.cn/a4/T1HshvBQ_T1RXrhCrK.jpg" alt="" class="m-image">
                 </a>
                 <a href="http://mobile.mi.com/in/index.html" class="go-home">Enter Mi.com &gt;</a>
             </div>
@@ -25,7 +24,7 @@
             <ul class="m-flex-row">
                 <li class="m-flex-col">
                     <a href="">
-                        <img src="http://127.0.0.1:8088/sylphy/resource/pages/topics/images/2.jpg" class="m-image">
+                        <img src="http://i3.mifile.cn/a4/T1exd_BgVT1RXrhCrK.jpg" class="m-image">
                     </a>
                 </li>
             </ul>
@@ -35,50 +34,23 @@
             <ul class="m-flex-row">
                 <li class="m-flex-col">
                     <a href="">
-                        <img src="http://127.0.0.1:8088/sylphy/resource/pages/topics/images/3.jpg" class="m-image">
+                        <img src="http://i3.mifile.cn/a4/T11_bvBbLT1RXrhCrK.jpg" class="m-image">
                     </a>
                 </li>
             </ul>
         </section>
 
         <section class="page-topic">
-            <ul class="m-flex-row">
+            <ul class="m-flex-row2">
                 <li class="m-flex-col">
                     <a href="">
-                        <img src="http://127.0.0.1:8088/sylphy/resource/pages/topics/images/4-1.jpg" class="m-image">
+                        <img src="http://i3.mifile.cn/a4/T1Pt_gBjAT1RXrhCrK.jpg" class="m-image">
                     </a>
                 </li>
                 <li class="m-flex-col">
                     <a href="">
-                        <img src="http://127.0.0.1:8088/sylphy/resource/pages/topics/images/4-2.jpg" class="m-image">
+                        <img src="http://i3.mifile.cn/a4/T1SCW_BvET1RXrhCrK.jpg" class="m-image">
                     </a>
-                </li>
-            </ul>
-        </section>
-    
-         <!-- 单品配置 -->
-        <section class="page-accessory">
-            <h3 class="m-header">畅销配件1</h3>
-            <ul class="accessory-list list-item-col-1">
-                <li class="accessory-item">
-                    <a href="http://item.mi.com/1150300012.html" target="_blank">
-                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=360&amp;height=360" alt="小米NOTE高透贴膜(2片)">
-                    </a> 
-                    <h4 class="item-name">
-                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
-                    </h4> 
-                    <p class="item-price">₹5499&nbsp;<span class="m-underline">₹544</span></p>         
-                    <a class="item-buy m-more-btn" href="">buy now</a> 
-                </li>
-                <li class="accessory-item">
-                    <a href="http://item.mi.com/1150300012.html" target="_blank">
-                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=360&amp;height=360" alt="小米NOTE高透贴膜(2片)">
-                    </a> 
-                    <h4 class="item-name">
-                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
-                    </h4> 
-                    <p class="item-price">₹5499</p>         
-                    <a class="item-buy m-more-btn" href="">buy now</a> 
                 </li>
             </ul>
         </section>
@@ -130,7 +102,7 @@
                 </li>
             </ul>
         </section>
-        
+
         <section class="page-accessory">
             <h3 class="m-header">畅销配件</h3>
             <ul class="accessory-list list-item-col-3">
@@ -158,6 +130,97 @@
                     <a href="http://item.mi.com/1150300012.html" target="_blank">
                         <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=240&amp;height=240" alt="小米NOTE高透贴膜(2片)">
                     </a> 
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499</p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=240&amp;height=240" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499</p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=240&amp;height=240" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499</p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=240&amp;height=240" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499</p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+            </ul>
+        </section>
+
+        <section class="page-accessory">
+            <h3 class="m-header">畅销配件</h3>
+            <ul class="accessory-list list-item-col-4">
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=240&amp;height=240" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499</p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=240&amp;height=240" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499</p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=240&amp;height=240" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499</p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=240&amp;height=240" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+
+                    <h4 class="item-name">
+                        <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
+                    </h4> 
+                    <p class="item-price">₹5499</p>         
+                    <a class="item-buy m-more-btn" href="">buy now</a> 
+                </li>
+                <li class="accessory-item">
+                    <a href="http://item.mi.com/1150300012.html" target="_blank">
+                        <img class="m-image" src="http://i1.mifile.cn/a1/T1ETWTBQhT1RXrhCrK.jpg?width=240&amp;height=240" alt="小米NOTE高透贴膜(2片)">
+                    </a> 
+
                     <h4 class="item-name">
                         <a href="http://item.mi.com/1150300012.html" target="_blank">Mi Headphones</a>
                     </h4> 
@@ -251,14 +314,14 @@
         <!-- 专题图片 -->
         <section class="page-topic">
             <ul class="m-flex-row">
-                <li class="m-flex-col">
+                <li class="m-flex-col flex-col-2">
                     <a href="">
-                        <img src="http://127.0.0.1:8088/sylphy/resource/pages/topics/images/3.jpg" class="m-image">
+                        <img src="http://i3.mifile.cn/a4/T11_bvBbLT1RXrhCrK.jpg" class="m-image">
                     </a>
                 </li>
             </ul>
         </section>
-    </div>      
+    </div>  
 
     <script src="http://127.0.0.1:8088/sylphy/prd/scripts/libs/base.min.js"></script>
     <script src="http://127.0.0.1:8088/sylphy/prd/scripts/libs/zepto.min.js"></script>
