--- a/src/styles/css/pages/topics/pc.css
+++ b/src/styles/css/pages/topics/pc.css
@@ -230,7 +230,7 @@ a {
  */
 body {
   background-color: #ebe7e0;
-  font-size: 0.75rem;
+  font-size: 20px;
   font: 0.9375rem/1.5 "Hiragino Sans GB", "Helvetica", "STHeitiSC-Light", "\5B8B\4F53", arial, sans-serif; }
 
 .m-image {
@@ -243,10 +243,10 @@ body {
   height: 60px;
   line-height: 60px;
   color: #fff;
+  font-size: 20px;
   padding-left: 16px;
   background-color: #ea5742;
-  border-radius: 8px;
-  box-sizing: box-sizing; }
+  border-radius: 8px; }
 
 .m-more-btn {
   display: block;
@@ -312,7 +312,8 @@ body {
       text-align: center;
       border-bottom: 1px solid #e6e6e6;
       padding-bottom: 16px;
-      box-sizing: border-box; }
+      box-sizing: border-box;
+      font-size: 20px; }
       .container .page-accessory .accessory-list .accessory-item .item-name {
         height: 48px;
         line-height: 48px; }
