--- a/src/styles/scss/pages/topics/hdindex.scss
+++ b/src/styles/scss/pages/topics/hdindex.scss
@@ -14,6 +14,7 @@ body {
 .m-header {
     @include g-simple-center(p2r(60));
     color: #fff;
+    font-size: p2r(24);
     padding-left: .5rem;
     background-color: #ea5742;
     border-radius: .25rem;
@@ -80,9 +81,10 @@ body {
                 border-bottom: 1px solid #e6e6e6;
                 padding-bottom: .5rem;
                 box-sizing: border-box;
-
+                font-size: p2r(24);
                 .item-name {
                     @include g-simple-center(1.5rem);
+
                 }
                 .item-price {
                 }
