--- a/src/views/pages/topics/hdindex/index.html
+++ b/src/views/pages/topics/hdindex/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <title>活动专题</title>
-        <link rel="stylesheet" href="http://127.0.0.1:8088/sylphy/src/styles/css/pages/topics/hdindex.css">
+        <!--link rel="stylesheet" href="http://127.0.0.1:8088/sylphy/src/styles/css/pages/topics/hdindex.css"-->
     </head>
     <body>
         <div class="container">
@@ -173,7 +173,7 @@
                 </ul>
             </section>
         </div>
-        <script src="http://127.0.0.1:8088/sylphy/src/scripts/libs/base.js"></script>
-        <script src="http://127.0.0.1:8088/sylphy/src/scripts/libs/zepto.js"></script>
+        <!--script src="http://127.0.0.1:8088/sylphy/src/scripts/libs/base.js"></script-->
+        <!--script src="http://127.0.0.1:8088/sylphy/src/scripts/libs/zepto.js"></script-->
     </body>
 </html>
