--- a/src/views/pages/topics/hdindex/pc.html
+++ b/src/views/pages/topics/hdindex/pc.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>活动专题</title>
-        <link rel="stylesheet" href="http://127.0.0.1:8088/sylphy/src/styles/css/pages/topics/pc.css">
+        <!--link rel="stylesheet" href="http://127.0.0.1:8088/sylphy/src/styles/css/pages/topics/pc.css"-->
     </head>
     <body>
 
@@ -323,7 +323,7 @@
         </section>
     </div>  
 
-    <script src="http://127.0.0.1:8088/sylphy/prd/scripts/libs/base.min.js"></script>
-    <script src="http://127.0.0.1:8088/sylphy/prd/scripts/libs/zepto.min.js"></script>
+    <!--script src="http://127.0.0.1:8088/sylphy/prd/scripts/libs/base.min.js"></script-->
+    <!--script src="http://127.0.0.1:8088/sylphy/prd/scripts/libs/zepto.min.js"></script-->
     </body>
 </html>
