--- a/src/styles/scss/pages/topics/hdindex.scss
+++ b/src/styles/scss/pages/topics/hdindex.scss
@@ -1,131 +1,131 @@
-@import "../../_minix/_index.scss";
+// @import "../../_minix/_index.scss";
 
-body {
-    background-color: #ebe7e0;
-    font-size: p2r(24);
-    font: 0.9375rem/1.5 "Hiragino Sans GB", "Helvetica", "STHeitiSC-Light", "\5B8B\4F53", arial, sans-serif;
-}
+// body {
+//     background-color: #ebe7e0;
+//     font-size: p2r(24);
+//     font: 0.9375rem/1.5 "Hiragino Sans GB", "Helvetica", "STHeitiSC-Light", "\5B8B\4F53", arial, sans-serif;
+// }
 
-.m-underline {
-    text-decoration: line-through;
-}
-.m-header {
-    @include g-simple-center(p2r(60));
-    color: #fff;
-    font-size: p2r(24);
-    padding-left: .5rem;
-    background-color: #ea5742;
-    border-radius: .25rem;
-    box-sizing: box-sizing;
-}
-.m-more-btn {
-    display: block;
-    cursor: pointer;
-    padding: 0;
-    outline: 0;
-    color: #fff;
-    text-align: center;
-    background-color: #fc4b1e;
-    border-color: #fc4b1e;
-    border-radius: 0.25rem;
-    @include g-resize(6.25rem);
-    @include g-simple-center(2.125rem);
-}
-// flexbox
-.m-flex-row {
-    @include g-flex-wrap();
-    @include g-row-flex();
+// .m-underline {
+//     text-decoration: line-through;
+// }
+// .m-header {
+//     @include g-simple-center(p2r(60));
+//     color: #fff;
+//     font-size: p2r(24);
+//     padding-left: .5rem;
+//     background-color: #ea5742;
+//     border-radius: .25rem;
+//     box-sizing: box-sizing;
+// }
+// .m-more-btn {
+//     display: block;
+//     cursor: pointer;
+//     padding: 0;
+//     outline: 0;
+//     color: #fff;
+//     text-align: center;
+//     background-color: #fc4b1e;
+//     border-color: #fc4b1e;
+//     border-radius: 0.25rem;
+//     @include g-resize(6.25rem);
+//     @include g-simple-center(2.125rem);
+// }
+// // flexbox
+// .m-flex-row {
+//     @include g-flex-wrap();
+//     @include g-row-flex();
 
-    .m-flex-col {
-        @include g-flex-block(1);
-    }
-}
+//     .m-flex-col {
+//         @include g-flex-block(1);
+//     }
+// }
 
-.container {
-    @include g-resize(22.5rem);
-    background-color: #fff;
-    line-height: 2;
-    a {
-       @include g-inline-block();
-       color: #000;
-    }
-    section {
-        // &:not(:first-child) {
-        //     margin-top: 0.25rem;
-        // }
-    }
-    .page-header {
-        position: relative;
-        .go-home {
-            position: absolute;
-            right: 3%;
-            top: 2%;
-            color: #fff;
-            font-size: p2r(24);
-        }
-    }
-    // 专题
-    .page-topic {
-    }
-    //配件
-    .page-accessory {
-        .accessory-list {
-            width: 100%;
-            @include g-clearfix();
+// .container {
+//     @include g-resize(22.5rem);
+//     background-color: #fff;
+//     line-height: 2;
+//     a {
+//        @include g-inline-block();
+//        color: #000;
+//     }
+//     section {
+//         // &:not(:first-child) {
+//         //     margin-top: 0.25rem;
+//         // }
+//     }
+//     .page-header {
+//         position: relative;
+//         .go-home {
+//             position: absolute;
+//             right: 3%;
+//             top: 2%;
+//             color: #fff;
+//             font-size: p2r(24);
+//         }
+//     }
+//     // 专题
+//     .page-topic {
+//     }
+//     //配件
+//     .page-accessory {
+//         .accessory-list {
+//             width: 100%;
+//             @include g-clearfix();
 
-            .accessory-item {
-                float: left;
-                text-align: center;
-                border-bottom: 1px solid #e6e6e6;
-                padding-bottom: .5rem;
-                box-sizing: border-box;
-                font-size: p2r(24);
-                .item-name {
-                    @include g-simple-center(1.5rem);
+//             .accessory-item {
+//                 float: left;
+//                 text-align: center;
+//                 border-bottom: 1px solid #e6e6e6;
+//                 padding-bottom: .5rem;
+//                 box-sizing: border-box;
+//                 font-size: p2r(24);
+//                 .item-name {
+//                     @include g-simple-center(1.5rem);
 
-                }
-                .item-price {
-                }
-                .item-buy {
-                    color: #fff;
-                }
-            }
+//                 }
+//                 .item-price {
+//                 }
+//                 .item-buy {
+//                     color: #fff;
+//                 }
+//             }
 
-            .item-desc {
-                background-color: #fff;
-            }
-        }
-    }
-    .page-accessory2 {
-        background-color: #ebe7e0;
-    }
+//             .item-desc {
+//                 background-color: #fff;
+//             }
+//         }
+//     }
+//     .page-accessory2 {
+//         background-color: #ebe7e0;
+//     }
 
-    .list-item-col-1 {
-        li {
-            width: p2r(720);
-        }
-    }
+//     .list-item-col-1 {
+//         li {
+//             width: p2r(720);
+//         }
+//     }
 
-    .list-item-col-2 {
-        li {
-            &:nth-child(odd) {
-                border-right: 1px solid #e6e6e6;
-            }
-            width: p2r(360);
-            .m-image {
-                max-width: p2r(300);
-            }
-        }
-    }
-    .list-item-col-3 {
-        li {
-            &:not(:nth-child(3n)) {
-                border-right: 1px solid #e6e6e6;
-            }
-            width: p2r(240);
-            .m-image {
-                width: 98%;
-            }
-        }
-    }
-}
+//     .list-item-col-2 {
+//         li {
+//             &:nth-child(odd) {
+//                 border-right: 1px solid #e6e6e6;
+//             }
+//             width: p2r(360);
+//             .m-image {
+//                 max-width: p2r(300);
+//             }
+//         }
+//     }
+//     .list-item-col-3 {
+//         li {
+//             &:not(:nth-child(3n)) {
+//                 border-right: 1px solid #e6e6e6;
+//             }
+//             width: p2r(240);
+//             .m-image {
+//                 width: 98%;
+//             }
+//         }
+//     }
+// }
